# HashFSP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/: hashfsp_launcher.py
src/hashfsp/: __init__.py  auth.py  cli.py  fs.py  paths.py  smb_client.py
